--- a/css/styles.css
+++ b/css/styles.css
@@ -12,9 +12,13 @@ h1 {
 }
 
 .intro {
-
+  font-family: serif;
+  font-size: 20px;
+  color: green;
 }
 
 .main {
-  
+  font-family: sans-serif;
+  font-size: 15px;
+  color: blue;
 }
