--- a/css/styles.css
+++ b/css/styles.css
@@ -12,12 +12,16 @@ h1 {
 }
 
 .intro {
+  margin-top: 40px;
+  margin-bottom: 20px;
   font-family: serif;
   font-size: 20px;
   color: green;
 }
 
 .main {
+  margin-top: 30px;
+  margin-bottom: 20px;
   font-family: sans-serif;
   font-size: 15px;
   color: blue;
